Fix spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -29,18 +29,18 @@ img {
 .project-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .project {
-  margin: 15px;
+  margin: 10px;
   padding: 10px;
   text-align: center;
   -moz-box-shadow: 0 0 5px #0B132B;
   -webkit-box-shadow: 0 0 5px #0B132B;
   box-shadow: 0 0 5px #0B132B;
   border-radius: 2%;
-  width: 45vw;
+  width: 43vw;
 }
 
 .project-image {
@@ -85,7 +85,7 @@ h3 {
   margin-top: 26px;
 }
 
-@media screen and (max-width: 915px) {
+@media screen and (max-width: 920px) {
   .project-container {
     justify-content: center;
   }
@@ -94,7 +94,7 @@ h3 {
   }
 
   .about-me-text {
-    width: 95%;
+    width: 90%;
     border-right: none;
     border-bottom: 1px solid black;
   }
